--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "arcane-earth-82723",
-  "version": "1.0.0",
-  "description": "",
+  "name": "node-sample",
+  "description": "Our sample Node to Heroku app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-validator": "^6.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.4",
-    "multer": "^1.4.2",
-    "nodemon": "^1.19.1"
+    "ejs": "~1.0.0",
+    "express": "~4.9.8"
   }
 }
