--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "~1.0.0",
-    "express": "~4.9.8"
+    "express": "~4.9.8",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15",
+    "multer": "^1.4.2"
   }
 }
